# webrtc-sample

janus/aiortc/: audioroom.py  pyproject.toml  videoroom.py
janus/client/: Dockerfile  audio_stream.sh  pyproject.toml  streamer.py  webrtc.sh  webrtcbin_test.py
janus/janus-docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run_docker.sh
janus/janus-docker/conf/: janus.jcfg  janus.plugin.streaming.jcfg  janus.transport.http.jcfg  janus.transport.websockets.jcfg
janus/ondemand/: index.html  main.js  style.css
janus/streaming/: index.html  main.js  style.css
