[tool.poetry]
name = "janus_aiortc"
version = "0.1.0"
description = ""
authors = ["wellflat <wellflat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiortc = "^1.5.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
