[tool.poetry]
name = "streamer"
version = "0.1.0"
description = ""
authors = ["ryohei.tanaka"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygobject = "^3.44.1"
pycairo = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
